--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
       <div class="row">
         <div class="col-lg-8 col-md-8">
           <ul class="info">
-            <li><i class="fa fa-envelope"></i> info@awerks.com</li>
-            <li><i class="fa-phone"></i> +91 99000 94727</li>
+            <a href="mailto:info@awerks.in">
+            <li><i class="fa fa-envelope"></i> info@awerks.com</li></a>
+            <a href="tel:+91 9900094727">
+            <li><i class="fa-phone"></i> +91 99000 94727</li></a>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
@@ -115,38 +117,9 @@
           <h2>Expert ELectronics and Hardware Connectivity Solution</h2>
         </div>
       </div>
-      <!-- <div class="item item-3">
-        <div class="header-text">
-          <span class="category">Miami, <em>South Florida</em></span>
-          <h2>Act Now!<br>Get the highest level penthouse</h2>
-        </div>
-      </div> -->
     </div>
   </div>
 <!-- -------------------------------------------------- -->
-  <!-- <section class="about-sec">
-    <div class="container">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="about-content"> <span class="top-title">About Us</span>
-          <h2>Welcome To Awerks</h2>
-          <p>Awerks Pvt Ltd is the company incorporated in India in 2022 in collaboration and partnership with RTI Technologies, Singapore. Our management team with collective experience of over 100 years in Electronics designs, manufacturing, QA, testing and customer support brings you a variety of products, parts and solutions for Electronics manufacturing and R&amp;D.</p>
-          <p>Our fully automated state of art FRC cable assembly manufacturing plant is already operational at Bangalore which is the first fully automated plant in India.</p>
-          <a href="about.html" class="default-btn btn"> Read More </a> </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="about-imgwrap">
-          <div class="about-img2"> <img src="https://www.awerks.in/images/about/2.png" alt="" title=""> </div>
-          <div class="about-img3"> <img src="images/about/2.png" alt="" title=""> </div>
-          <div class="about-img4"> <img src="images/about/3.png" alt=""> </div>
-          <div class="about-shape1"> <img src="images/about-shape1.jpg" alt=""> </div>
-          <div class="about-shape2"> <img src="images/about-shape2.png" alt=""> </div>
-        </div>
-      </div>
-    </div>  
-  </div>  
-  </section> -->
-  <!-- ------------------------------------------------- -->
   <div class="featured section">
     <div class="container">
       <div class="row">
@@ -759,11 +732,57 @@
 
   <footer>
     <div class="container">
-      <div class="col-lg-8">
-        <p>Copyright © 2024 Channel Softech Ltd. All rights reserved. 
-      </div>
+        <div class="extracontent">
+            <div class="contact_info">
+                <div class="addphonemail">
+                    <h4>Contact Info</h4>
+                    <p><i class="fa fa-map-marker"></i>Halli, Chikkabanavara Post, Bangalore 560090</p>
+                    <p><i class="fa fa-phone"></i><a href="tel:+91 9900094727">+91 99000 94727</a></p>
+                    <p><i class="fa fa-phone"></i><a href="tel:+91 9972175860">+91 99721 75860</a></p>
+                    <p><i class="fa fa-envelope"></i><a href="mailto:info@awerks.in">info@awerks.in</a></p>
+                </div>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="quick_links">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="Productss">
+                <h4><a href="products.html">Products</a></h4>
+                <ul>
+                    <li><a href="products.html">Flexible Ribbon Cables</a></li>
+                    <li><a href="products.html">Wire Harness</a></li>
+                    <li><a href="products.html">Touch & Display Screens</a></li>
+                    <li><a href="products.html">Battery Packs</a></li>
+                    <li><a href="products.html">LED Lighting & Fixtures</a></li>
+                </ul>
+            </div>
+            <div class="mapss">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3886.342488794826!2d77.51485231482313!3d13.077467390786442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTPCsDA0JzM4LjkiTiA3N8KwMzEnMDEuNCJF!5e0!3m2!1sen!2sin!4v1687345139941!5m2!1sen!2sin"></iframe>
+            </div>
+        </div>
     </div>
   </footer>
+  <div class="copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+         <p>© Copyright 2023&nbsp; - &nbsp;Awerks&nbsp;&nbsp;|&nbsp;&nbsp;Powered By <a href="https://channelsoftech.com" target="_blank" class="text-white">Channel Softech</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
