--- a/services.html
+++ b/services.html
@@ -48,8 +48,10 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-8 col-md-8">
           <ul class="info">
-            <li><i class="fa fa-envelope"></i> info@awerks.com</li>
-            <li><i class="fa-phone"></i> +91 99000 94727</li>
+            <a href="mailto:info@awerks.in">
+            <li><i class="fa fa-envelope"></i> info@awerks.com</li></a>
+            <a href="tel:+91 9900094727">
+            <li><i class="fa-phone"></i> +91 99000 94727</li></a>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
@@ -355,13 +357,57 @@ https://templatemo.com/tm-591-villa-agency
 
   <footer>
     <div class="container">
-      <div class="col-lg-8">
-        <p>Copyright © 2024 Channel Softech Ltd. All rights reserved. 
-        
-        <!-- Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p> -->
-      </div>
+        <div class="extracontent">
+            <div class="contact_info">
+                <div class="addphonemail">
+                    <h4>Contact Info</h4>
+                    <p><i class="fa fa-map-marker"></i>Halli, Chikkabanavara Post, Bangalore 560090</p>
+                    <p><i class="fa fa-phone"></i><a href="tel:+91 9900094727">+91 99000 94727</a></p>
+                    <p><i class="fa fa-phone"></i><a href="tel:+91 9972175860">+91 99721 75860</a></p>
+                    <p><i class="fa fa-envelope"></i><a href="mailto:info@awerks.in">info@awerks.in</a></p>
+                </div>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="quick_links">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="Productss">
+                <h4><a href="products.html">Products</a></h4>
+                <ul>
+                    <li><a href="products.html">Flexible Ribbon Cables</a></li>
+                    <li><a href="products.html">Wire Harness</a></li>
+                    <li><a href="products.html">Touch & Display Screens</a></li>
+                    <li><a href="products.html">Battery Packs</a></li>
+                    <li><a href="products.html">LED Lighting & Fixtures</a></li>
+                </ul>
+            </div>
+            <div class="mapss">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3886.342488794826!2d77.51485231482313!3d13.077467390786442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTPCsDA0JzM4LjkiTiA3N8KwMzEnMDEuNCJF!5e0!3m2!1sen!2sin!4v1687345139941!5m2!1sen!2sin"></iframe>
+            </div>
+        </div>
     </div>
   </footer>
+  <div class="copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+         <p>© Copyright 2023&nbsp; - &nbsp;Awerks&nbsp;&nbsp;|&nbsp;&nbsp;Powered By <a href="https://channelsoftech.com" target="_blank" class="text-white">Channel Softech</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
