--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
             <a href="mailto:info@awerks.in">
             <li><i class="fa fa-envelope"></i> info@awerks.com</li></a>
             <a href="tel:+91 9900094727">
-            <li><i class="fa-phone"></i> +91 99000 94727</li></a>
+            <li><i class="fa fa-phone"></i> +91 99000 94727</li></a>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
@@ -77,7 +77,7 @@
                       <li><a href="products.html" class="active">Products</a></li>
                       <li><a href="services.html">Services</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="contact.html"><i class="fa-phone"></i>Enquiry</a></li>
+                      <li><a href="contact.html"><i class="fa fa-phone"></i>Enquiry</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -340,7 +340,7 @@
           <div class="contact_info">
               <div class="addphonemail">
                   <h4>Contact Info</h4>
-                  <p><i class="fa fa-map-marker"></i>Halli, Chikkabanavara Post, Bangalore 560090</p>
+                  <p><i class="fa fa-map-marker"></i>Kereguddada Halli, Chikkabanavara Post, Bangalore 560090</p>
                   <p><i class="fa fa-phone"></i><a href="tel:+91 9900094727">+91 99000 94727</a></p>
                   <p><i class="fa fa-phone"></i><a href="tel:+91 9972175860">+91 99721 75860</a></p>
                   <p><i class="fa fa-envelope"></i><a href="mailto:info@awerks.in">info@awerks.in</a></p>
@@ -387,50 +387,6 @@
     </div>
   </div>
 </div>
-  <!-- ------------------------------ -->
-  <!-- ------------------------------ -->
-  <!-- <footer>
-    <div class="containerr">
-        <div class="footer-content">
-            <div class="contact-info">
-                <h2>Contact Info :</h2>
-                <p>Kereguddada Halli,<br>
-                Chikkabanavara Post,<br>
-                Bangalore 560090<br>
-                <span>&#9742;</span>+91 99000 94727<br>
-                <span>&#9742;</span>+91 99721 75860<br>
-                <span>&#9993;</span>info@awerks.in</p>
-            </div>
-            <div class="quick-links">
-                <h2>Quick Links:</h2>
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Products</li>
-                    <li>Services</li>
-                    <li>Contact Us</li>
-                </ul>
-            </div>
-            <div class="products">
-                <h2>Products:</h2>
-                <ul>
-                    <li>Flexible Ribbon Cables</li>
-                    <li>Wire Harness</li>
-                    <li>Touch & Display Screens</li>
-                    <li>Battery Packs</li>
-                    <li>LED Lighting & Fixtures</li>
-                </ul>
-            </div>
-            <div class="location-map">
-                <h2>Location Map:</h2>
-                <p>hello</p>
-            </div>
-        </div>
-    </div>
-</footer> -->
-  <!-- ------------------------------ -->
-  <!-- ------------------------------ -->
-
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
   <script src="assets/js/script.js"></script>
