--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             <a href="mailto:info@awerks.in">
             <li><i class="fa fa-envelope"></i> info@awerks.com</li></a>
             <a href="tel:+91 9900094727">
-            <li><i class="fa-phone"></i> +91 99000 94727</li></a>
+            <li><i class="fa fa-phone"></i> +91 99000 94727</li></a>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
@@ -74,7 +74,7 @@
                       <li><a href="products.html">Products</a></li>
                       <li><a href="services.html">Services</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="contact.html"><i class="fa-phone"></i>Enquiry</a></li>
+                      <li><a href="contact.html"><i class="fa fa-phone"></i>Enquiry</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <span class="breadcrumb"><a href="#">Home</a> / About Us</span>
+          <span class="breadcrumb"><a href="index.html">Home</a> / About Us</span>
           <h3>About Us</h3>
         </div>
       </div>
@@ -140,7 +140,7 @@
               <div class="contact_info">
                   <div class="addphonemail">
                       <h4>Contact Info</h4>
-                      <p><i class="fa fa-map-marker"></i>Halli, Chikkabanavara Post, Bangalore 560090</p>
+                      <p><i class="fa fa-map-marker"></i>Kereguddada Halli, Chikkabanavara Post, Bangalore 560090</p>
                       <p><i class="fa fa-phone"></i><a href="tel:+91 9900094727">+91 99000 94727</a></p>
                       <p><i class="fa fa-phone"></i><a href="tel:+91 9972175860">+91 99721 75860</a></p>
                       <p><i class="fa fa-envelope"></i><a href="mailto:info@awerks.in">info@awerks.in</a></p>
