--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Villa Agency TemplateMo - Contact Page</title>
+    <title>Contact Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 
-    <!-- <script src="https://cdn.emailjs.com/dist/email.min.js"></script> -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
 </script>
@@ -60,7 +59,7 @@
             <a href="mailto:info@awerks.in">
             <li><i class="fa fa-envelope"></i> info@awerks.com</li></a>
             <a href="tel:+91 9900094727">
-            <li><i class="fa-phone"></i> +91 99000 94727</li></a>
+            <li><i class="fa fa-phone"></i> +91 99000 94727</li></a>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
@@ -93,7 +92,7 @@
                       <li><a href="products.html">Products</a></li>
                       <li><a href="services.html">Services</a></li>
                       <li><a href="contact.html" class="active">Contact Us</a></li>
-                      <li><a href="contact.html"><i class="fa-phone"></i>Enquiry</a></li>
+                      <li><a href="contact.html"><i class="fa fa-phone"></i>Enquiry</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -110,7 +109,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <span class="breadcrumb"><a href="#">Home</a>  /  Contact Us</span>
+          <span class="breadcrumb"><a href="index.html">Home</a>  /  Contact Us</span>
           <h3>Contact Us</h3>
         </div>
       </div>
@@ -125,7 +124,6 @@
             <h6>| Contact Us</h6>
             <h2>Get In Touch With Our Experts</h2>
           </div>
-          <!-- <p>When you really need to download free CSS templates, please remember our website TemplateMo. Also, tell your friends about our website. Thank you for visiting. There is a variety of Bootstrap HTML CSS templates on our website. If you need more information, please contact us.</p> -->
           <div class="row">
             <div class="col-lg-12">
               <div class="item phone">
@@ -137,6 +135,18 @@
               <div class="item email">
                 <img src="assets/images/email-icon.png" alt="" style="max-width: 52px;">
                 <h6>info@awerks.co<br><span>Business Email</span></h6>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="item malaysia">
+                <img src="./assets/images/location-marker.jpg" alt="" style="max-width: 52px;">
+                <h6>Malaysia Office<br><span>41-B, Jalan Quantan 10150 George Town, Penang</span></h6>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="item singapore">
+                <img src="./assets/images/location-marker.jpg" alt="" style="max-width: 52px;">
+                <h6>Singapore Office<br><span>170 Joo Chiat Terrace #01-03 Singapore 427317</span></h6>
               </div>
             </div>
           </div>
@@ -182,12 +192,6 @@
             </div>
           </form>
         </div>
-        
-        <!-- <div class="col-lg-12">
-          <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3886.342488794826!2d77.51485231482313!3d13.077467390786442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTPCsDA0JzM4LjkiTiA3N8KwMzEnMDEuNCJF!5e0!3m2!1sen!2sin!4v1687345139941!5m2!1sen!2sin" width="100%" height="500px" frameborder="0" style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);" allowfullscreen=""></iframe>
-          </div>
-        </div> -->
       </div>
     </div>
   </div>
@@ -198,7 +202,7 @@
             <div class="contact_info">
                 <div class="addphonemail">
                     <h4>Contact Info</h4>
-                    <p><i class="fa fa-map-marker"></i>Halli, Chikkabanavara Post, Bangalore 560090</p>
+                    <p><i class="fa fa-map-marker"></i>Kereguddada Halli, Chikkabanavara Post, Bangalore 560090</p>
                     <p><i class="fa fa-phone"></i><a href="tel:+91 9900094727">+91 99000 94727</a></p>
                     <p><i class="fa fa-phone"></i><a href="tel:+91 9972175860">+91 99721 75860</a></p>
                     <p><i class="fa fa-envelope"></i><a href="mailto:info@awerks.in">info@awerks.in</a></p>
