--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-villa-agency.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
@@ -139,7 +139,7 @@
           <div class="extracontent">
               <div class="contact_info">
                   <div class="addphonemail">
-                      <h4>Contact Info</h4>
+                      <h4>Contact Info</h4><hr>
                       <p><i class="fa fa-map-marker"></i>Kereguddada Halli, Chikkabanavara Post, Bangalore 560090</p>
                       <p><i class="fa fa-phone"></i><a href="tel:+91 9900094727">+91 99000 94727</a></p>
                       <p><i class="fa fa-phone"></i><a href="tel:+91 9972175860">+91 99721 75860</a></p>
@@ -153,26 +153,27 @@
                   </div>
               </div>
               <div class="quick_links">
-                  <h4>Quick Links</h4>
+                  <h4>Quick Links</h4><hr>
                   <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="products.html">Products</a></li>
-                      <li><a href="services.html">Services</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
+                      <li><a href="index.html">Home</a></li><hr>
+                      <li><a href="about.html">About</a></li><hr>
+                      <li><a href="products.html">Products</a></li><hr>
+                      <li><a href="services.html">Services</a></li><hr>
+                      <li><a href="contact.html">Contact Us</a></li><hr>
                   </ul>
               </div>
               <div class="Productss">
-                  <h4><a href="products.html">Products</a></h4>
+                  <h4><a href="products.html">Products</a></h4><hr>
                   <ul>
-                      <li><a href="products.html">Flexible Ribbon Cables</a></li>
-                      <li><a href="products.html">Wire Harness</a></li>
-                      <li><a href="products.html">Touch & Display Screens</a></li>
-                      <li><a href="products.html">Battery Packs</a></li>
-                      <li><a href="products.html">LED Lighting & Fixtures</a></li>
+                      <li><a href="products.html">Flexible Ribbon Cables</a></li><hr>
+                      <li><a href="products.html">Wire Harness</a></li><hr>
+                      <li><a href="products.html">Touch & Display Screens</a></li><hr>
+                      <li><a href="products.html">Battery Packs</a></li><hr>
+                      <li><a href="products.html">LED Lighting & Fixtures</a></li><hr>
                   </ul>
               </div>
               <div class="mapss">
+                <h4>Location Map</h4><hr>
                   <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3886.342488794826!2d77.51485231482313!3d13.077467390786442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTPCsDA0JzM4LjkiTiA3N8KwMzEnMDEuNCJF!5e0!3m2!1sen!2sin!4v1687345139941!5m2!1sen!2sin"></iframe>
               </div>
           </div>
