--- a/products.html
+++ b/products.html
@@ -383,7 +383,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-       <p>© Copyright 2023&nbsp; - &nbsp;Awerks&nbsp;&nbsp;|&nbsp;&nbsp;Powered By <a href="https://channelsoftech.com" target="_blank" class="text-white">Channel Softech</a></p>
+        <p>© Copyright 2023&nbsp; - &nbsp;Awerks&nbsp;&nbsp;|&nbsp;&nbsp;Powered By <a href="https://github.com/chiragkrishna07" target="_blank" class="text-white">Chirag</a></p>
       </div>
     </div>
   </div>
